--- a/CalculadoraCedears.Api/CrossCutting/Resources/Messages.resx
+++ b/CalculadoraCedears.Api/CrossCutting/Resources/Messages.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CedearAlreadyExists" xml:space="preserve">
+    <value>Ya existe un cedear para la fecha ingresada</value>
+  </data>
   <data name="OfflineServer" xml:space="preserve">
     <value>El servidor se encuentra fuera de servicio por favor intente más tarde.</value>
   </data>
